add: add feature to update record